--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "sass": "^1.83.0"
   },
   "devDependencies": {
